--- a/WeatherForecast/Views/WeatherForecastView.xaml
+++ b/WeatherForecast/Views/WeatherForecastView.xaml
@@ -7,24 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <StackPanel HorizontalAlignment = "Left">
-
-            <ItemsControl ItemsSource = "{Binding Path = Forecasts}">
-
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation = "Horizontal">
-                            <TextBlock Text = "{Binding Path = Temperature, Mode = OneWay}" 
-                        Margin = "0 5 3 5"/>
-                            <TextBlock Text = "{Binding Path = Date, Mode = OneWay}" 
-                        Margin = "0 5 3 5"/>
-
-                        </StackPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-
-            </ItemsControl>
-
-        </StackPanel>
+        <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" Text="{Binding Path = CurrentWeather.Temperature, Mode = OneWay}" TextWrapping="Wrap" VerticalAlignment="Top" Height="80" Width="150"/>
     </Grid>
 </UserControl>
