--- a/WeatherForecast/Views/WeatherForecastView.xaml
+++ b/WeatherForecast/Views/WeatherForecastView.xaml
@@ -1,12 +1,10 @@
 ﻿<UserControl x:Class="WeatherForecast.Views.WeatherForecastView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WeatherForecast.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" Text="{Binding Path = CurrentWeather.Temperature, Mode = OneWay}" TextWrapping="Wrap" VerticalAlignment="Top" Height="80" Width="150"/>
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  Height="400" Width="450" Loaded="Window_Loaded">
+    <Grid Background="LightBlue">
+        <Canvas Name="canGraph" Background="White"
+      Width="350" Height="300"
+      VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </Grid>
 </UserControl>
