--- a/WeatherForecast/MainWindow.xaml
+++ b/WeatherForecast/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:WeatherForecast"
         xmlns:views = "clr-namespace:WeatherForecast.Views"
         mc:Ignorable="d"
+        Background="LightBlue"
         Title="MainWindow" Height="566" Width="550">
     <views:WeatherForecastView x:Name = "WeatherForecastViewControl" Margin="0,0,0,0"/>
 </Window>
