--- a/WeatherForecast/Views/WeatherForecastView.xaml
+++ b/WeatherForecast/Views/WeatherForecastView.xaml
@@ -2,9 +2,11 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   Height="550" Width="550" Loaded="Window_Loaded">
-    <Grid Background="LightBlue">
+    <Grid Background="LightBlue"
+          VerticalAlignment="Center" HorizontalAlignment="Center">
         <Canvas Name="canGraph" Background="White"
       Width="500" Height="500"
       VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        <TextBlock HorizontalAlignment="Left" Margin="400,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="100" Width="100"><Run Text="{Binding CurrentWeather, Mode=OneWay}"/><Run Language="hu-hu"/></TextBlock>
     </Grid>
 </UserControl>
